src/main/java/com/example/medappointmentscheduler/error/PatientNotFoundException.java
package com.example.medappointmentscheduler.error;

public class PatientNotFoundException extends RuntimeException {
    public PatientNotFoundException(Long id) {
        super("Patient with id " + id + " not found.");
    }
}
